Update web on state change

--- a/busy_lights_ui/lib/busy_lights_ui_web/live/page_live.html.leex
+++ b/busy_lights_ui/lib/busy_lights_ui_web/live/page_live.html.leex
@@ -6,4 +6,5 @@
   <button phx-click="yellow_button">Yellow</button>
   <button phx-click="green_button">Green</button>
   <button phx-click="blank_button">Blank</button>
+  <h1>Current colour: <%= @lights %></h1>
 </section>
