Improve node list

--- a/busy_lights_ui/lib/busy_lights_ui_web/live/page_live.html.leex
+++ b/busy_lights_ui/lib/busy_lights_ui_web/live/page_live.html.leex
@@ -12,7 +12,9 @@
   <%= if length(@nodes) > 0 do %>
     <%= for node <- @nodes do %>
       <div>
+        <%= if node == @self do %><b><% end %>
         <%= node %>
+        <%= if node == @self do %></b><% end %>
       </div>
     <% end %>
   <% else %>
