--- a/busy_lights_ui/lib/busy_lights_ui_web/live/page_live.html.leex
+++ b/busy_lights_ui/lib/busy_lights_ui_web/live/page_live.html.leex
@@ -1,5 +1,5 @@
 <section class="phx-hero" style="background-color:<%= @color %>;">
-  <h1>Peace-of-mind from internal distractions</h1>
+  <h1>Peace-of-mind from physical distractions</h1>
 
   <button phx-click="red_button">Red</button>
   <button phx-click="yellow_button">Yellow</button>
