--- a/busy_lights_ui/lib/busy_lights_ui_web/live/page_live.html.leex
+++ b/busy_lights_ui/lib/busy_lights_ui_web/live/page_live.html.leex
@@ -4,6 +4,8 @@
   <button phx-click="red_button">Red</button>
   <button phx-click="yellow_button">Yellow</button>
   <button phx-click="green_button">Green</button>
+  <button phx-click="blue_button">Blue</button>
+  <button phx-click="white_button">White</button>
   <button phx-click="blank_button">Blank</button>
   <h2>Status: <%= @status %></h2>
 </section>
