--- a/ui/lib/busy_lights_ui_web/components/layouts/app.html.heex
+++ b/ui/lib/busy_lights_ui_web/components/layouts/app.html.heex
@@ -1,12 +1,9 @@
 <header class="px-4 sm:px-6 lg:px-8">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
+      <a href="https://github.com/royveshovda/busy_lights" class="text-brand hover:text-brand-dark">
+        Source code
       </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v{Application.spec(:phoenix, :vsn)}
-      </p>
     </div>
   </div>
 </header>
