💄 Include link to dashboard

--- a/ui/lib/busy_lights_ui_web/components/layouts/app.html.heex
+++ b/ui/lib/busy_lights_ui_web/components/layouts/app.html.heex
@@ -1,9 +1,14 @@
 <header class="px-4 sm:px-6 lg:px-8">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
-      <a href="https://github.com/royveshovda/busy_lights" class="text-brand hover:text-brand-dark">
+      <a href="https://github.com/royveshovda/busy_lights">
         Source code
       </a>
+    </div>
+    <div class="flex items-center gap-4">
+      <.link navigate={~p"/dev/dashboard"}>
+        LiveDashboard
+      </.link>
     </div>
   </div>
 </header>
