✨ Source code link open in new window

--- a/ui/lib/busy_lights_ui_web/components/layouts/app.html.heex
+++ b/ui/lib/busy_lights_ui_web/components/layouts/app.html.heex
@@ -1,7 +1,7 @@
 <header class="px-4 sm:px-6 lg:px-8">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
-      <a href="https://github.com/royveshovda/busy_lights">
+      <a href="https://github.com/royveshovda/busy_lights" target="_blank">
         Source code
       </a>
     </div>
